		Due to differences between pcbnew and gpcb,
		only gpcb newlib files containing only one footprint (one element) are useables.
	Dirty rectangle calculation debugged.
	WinEDA_DrawPanel::ConvertPcbUnitsToPixelsUnits( EDA_Rect& aRect ) can be used to convert a bouding box to a clip box
	(see example in deltrack.cpp)

2008-Mar-06 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+help
    Eliminated bug "help files not found!".


2008-Mar-5 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Solved problem in fill zone calculations when using buried or blind vias (like micro vias)


2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+common
    Path for the help files changed to doc/help.
+help
    help moved to the doc/help.
+doc
    Separated from KiCad source code to the trunk/kicad-doc.
+library
+modules
    Separated from KiCad source code to the trunk/kicad-library.


2008-Mar-3 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Completed transision to BOARD::GetLayerName() and away from ReturnPcbLayerName().
    LayerNames and LAYER_T are saved in the *.brd file and may be edited
    there with a text editor until the UI is in place to edit them in PCBNEW.
    To understand the strategy, see BOARD::GetLayerName() in class_board.cpp
    and see WinEDA_BasePcbFrame::ReadSetup().  I will be adding "Board" menu
    item to Preferences, but there is more to come before the UI gets done:
    net classes.
  * Clear_Pcb() now deletes the existing BOARD() and new's a new BOARD() so that
    the default BOARD::m_Layer[] values can be set in the new BOARD's constructor.


2008-mars-03 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>